# minecraft-mcp-gdpc

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_minecraft_mcp_fixed.py
.roo/: mcp.json
docs/: api_spec.md  architecture_diagram.mmd  database_schema.md  implementation_plan.md
gdpc-project/: build_house.py  test_gdpc.py
src/: main.py
src/api/: __init__.py  auth_router.py  models.py  status_router.py  storage_router.py  template_router.py
src/gdpc_interface/: __init__.py  block_operations.py  connection.py  exceptions.py  structure_operations.py  utils.py  world_operations.py
src/supabase/: __init__.py  client.py
src/supabase_api/: __init__.py  client.py  storage.py  supabase_wrapper.py
tests/: conftest.py
tests/api/: conftest.py  test_auth_api.py  test_status_api.py  test_storage_api.py  test_template_api.py
tests/gdpc_interface/: debug_block_placement.py  test_block_operations.py  test_connection.py  test_connection_pytest.py  test_plan.md  test_structure_operations.py  test_utils.py  test_world_operations.py
tests/supabase_api/: test_storage.py
